# Operation-Systems

./: README.md
Kollok1/: CMakeLists.txt  Readme.md
Kollok1/Kollok1/: CMakeLists.txt  FactorialClass.cpp  FactorialClass.h  Kollok1.cpp  Kollok1.h  LinkedList.cpp  LinkedList.h  VecClass.cpp  VecClass.h  Теория.txt
Kollok1/Kollok1/tests/: test.cpp
Kollok2/: CMakeLists.txt  apiclient.cpp  apiclient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  server_main.cpp  task.cpp  task.h  taskstore.cpp  taskstore.h  todoserver.cpp  todoserver.h
Lab1/: Employee.h  Lab1.sln  README.md
Lab1/Creator/: Creator.cpp  Creator.vcxproj
Lab1/Employee/: Employee.vcxproj  Employee.vcxproj.filters
Lab1/Main/: Main.cpp  Main.vcxproj
Lab1/Reporter/: Reporter.cpp  Reporter.vcxproj
Lab2/Lab2/: CMakeLists.txt  Lab2.cpp  Lab2.h
Lab2/Lab2/tests/: test.cpp
Lab2_17standard/: CMakeLists.txt  Readme.md
Lab2_17standard/Lab2_17standard/: CMakeLists.txt  Lab2_17standard.cpp
Lab2_17standard/Lab2_17standard/tests/: test.cpp
Lab3/: CMakeLists.txt
Lab3/Lab3/: CMakeLists.txt  Lab3.cpp  Lab3.h  MarkerControl.cpp  MarkerControl.h
Lab3/Lab3/tests/: tests.cpp
Lab3_11standard/: CMakeLists.txt  Readme.md
Lab3_11standard/Lab3_11standard/: CMakeLists.txt  Lab3.cpp  Lab3.h  MarkerControl.cpp  MarkerControl.h
Lab3_11standard/Lab3_11standard/tests/: tests.cpp
Lab4/: CMakeLists.txt
Lab4/Lab4/: CMakeLists.txt  Receiver.cpp  Sender.cpp
Lab4/Lab4/tests/: message_test.cpp
Lab4/Lab4/utils/: input_parsing.cpp  input_parsing.h
Lab5/Lab5/: CMakeLists.txt  Client.cpp  Server.cpp  common.h  file_utils.cpp  lock_utils.cpp  pipe_utils.cpp  pipe_utils.h  proc_utils.cpp
